src/test/run-pass/borrowck-move-by-capture-ok.rs
pub fn main() {
    let bar = ~3;
    let h: proc() -> int = || *bar;
    assert_eq!(h(), 3);
}
